# BAGLE_Microlensing

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .swp  BAGLE_+_PyMC.ipynb  BAGLE_TUTORIAL.ipynb  Frame_conversion_examples.ipynb  README.md  model_fit_tutorial.ipynb  model_fit_tutorial_draft.ipynb  model_fit_tutorial_draft_2.ipynb  model_fit_tutorial_draft_3.ipynb  model_fit_tutorial_draft_4.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile  README_docker.md  docker-compose.yml  entrypoint.sh  test_imports.py
docs/: BSBL.rst  BSBL_Data.rst  BSBL_Model.rst  BSBL_Parallax.rst  BSBL_Param.rst  BSPL.rst  BSPL_Data.rst  BSPL_Model.rst  BSPL_Param.rst  FSPL.rst  FSPLTest.rst  FSPL_Data.rst  FSPL_Model.rst  Gen_Use.rst  Gen_Use_model_fitter.rst  Makefile  MicrolensSolver.rst  ModelClass.rst  PSBL.rst  PSBL_Model.rst  PSBL_Parallax.rst  PSBL_Param.rst  PSPL.rst  PSPL_Data.rst  PSPL_Model.rst  PSPL_Parallax.rst  PSPL_Param.rst  PSPL_Solver.rst  PSPL_User.rst  Prior_Generator.rst  Satellite_Parallax.rst  api_docs.rst  citation.rst  conf.py  data.rst  fitting.rst  frame_convert.rst  getting_started.rst  html_output.txt  index.html  (+10 more)
docs/. /doctrees/: FSPL.doctree  FSPLTest.doctree  FSPL_User.doctree  Gen_Use.doctree  PSBL.doctree  PSBL_Data.doctree  PSBL_Parallax.doctree  PSBL_Param.doctree  PSBL_User.doctree  PSPL.doctree  PSPL_Data.doctree  PSPL_GP.doctree  PSPL_Parallax.doctree  PSPL_Param.doctree  (+6 more)
docs/api/: model.Celerite_GP_Model.rst  model.FSPL.rst  model.FSPL_Limb.rst  model.FSPL_Limb_noParallax.rst  model.PSBL_PhotAstromParam1.rst  model.PSBL_PhotAstrom_Par_GP_Param1.rst  model.PSBL_PhotAstrom_Par_Param2.rst  model.PSBL_PhotAstrom_Par_Param3.rst  model.PSBL_PhotAstrom_noPar_Param1.rst  model.PSPL_GP_PhotParam1.rst  model.PSPL_GP_PhotParam2_2.rst  model.PSPL_Parallax.rst  model.PSPL_Phot.rst  model.PSPL_PhotAstrom_Par_GP_Param2.rst  model.PSPL_PhotAstrom_Par_GP_Param3.rst  model.PSPL_PhotAstrom_Par_LumLens_GP_Param1.rst  model.PSPL_PhotAstrom_Par_Param1.rst  model.PSPL_PhotAstrom_Par_Param3.rst  model.PSPL_PhotAstrom_noPar_GP_Param1.rst  model.PSPL_PhotAstrom_noPar_Param4.rst  model.PSPL_PhotParam1.rst  model.PSPL_Phot_Par_GP_Param2.rst  model.PSPL_Phot_Par_Param1.rst  model.cluster.rst  model.dparallax_dt_in_direction.rst  model.get_einstein_time.rst  model.get_thetas.rst  model.get_uhat.rst  model.get_unit_vectors.rst  model.twod_int.rst  model.u0_hat_from_thetaE_hat.rst
docs/doctrees/: BSPL.doctree  BSPL_Data.doctree  BSPL_Parallax.doctree  BSPL_Param.doctree  FSPL.doctree  FSPLTest.doctree  FSPL_User.doctree  Gen_Use.doctree  Gen_Use_model_fitter.doctree  PSBL.doctree  PSBL_Data.doctree  PSBL_Parallax.doctree  PSBL_Param.doctree  PSBL_User.doctree  PSPL.doctree  PSPL_Data.doctree  PSPL_GP.doctree  PSPL_Parallax.doctree  PSPL_Param.doctree  PSPL_Solver.doctree  PSPL_User.doctree  Prior_Generator.doctree  UserClass.doctree  environment.pickle  index.doctree  intro.doctree  model.doctree  model3.doctree  model_fitter.doctree
docs/html/: .buildinfo  BSPL.html  BSPL_Data.html  BSPL_Parallax.html  BSPL_Param.html  FSPL.html  FSPLTest.html  FSPL_User.html  Gen_Use.html  Gen_Use_model_fitter.html  PSBL.html  PSBL_Data.html  PSBL_Parallax.html  PSBL_Param.html  PSBL_User.html  PSPL.html  PSPL_Data.html  PSPL_GP.html  PSPL_Parallax.html  PSPL_Param.html  PSPL_Solver.html  PSPL_User.html  Prior_Generator.html  UserClass.html  genindex.html  index.html  intro.html  model.html  model3.html  model_fitter.html  objects.inv  search.html  searchindex.js
docs/notebooks/: example_PSBL_blended.ipynb  example_compare_packages.ipynb  example_satellite_parallax.ipynb  paper1_figures.py
fit_tutorial_drafts/: trash.txt
src/BAGLE/: data.py  fake_data.py  frame_convert.py  model.py  model_fitter.py  multinest_utils.py  munge.py  plot_models.py
src/bagel/: ._model.py  fake_data.py  model_fitter.py
src/bagle/: __init__.py  data.py  fake_data.py  frame_convert.py  model.py  model_fitter.py  model_jax.py  multinest_utils.py  orbit.py  orbits.py  parallax.py  plot_models.py  sensitivity.py
src/micromodel.egg-info/: PKG-INFO  SOURCES.txt
tests/: ._test_model.py  conftest.py  fake_data.py  test_data.py  test_frame_convert.py  test_model.py  test_model_fitter.py  test_model_jax.py  test_sensitivity.py  testingmodels.py
(+921 files in other folders)
