[project]
name = "BAGLE"
description = "BAGLE (Bayesian Analysis of Gravitational Lensing Events) is a package to model and fit microlensing events."
dynamic = ["version"]
authors = [
    {name = "Jessica Lu", email = "jlu.astro@berkeley.edu"},
    {name = "T. Dex Bhadra"},
    {name = "Michael Medford"},
    {name = "Casey Lam"},
    {name = "Macy Huston"},
    {name = "Edward Broadberry"},
    {name = "Jeff Chen"},
    {name = "Andrew Scharf"},
    {name = "Sean Terry"},
    {name = "Nijaid Arredondo"}
]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]e*"]

dependencies = ["numpy>=1.24",
                "pymultinest",
                "matplotlib",
                "astropy>=5.3",
                "celerite>=0.4.2",
                "scipy>=1.10"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Astronomers"
]


[project.urls]
Homepage = "https://github.com/MovingUniverseLab/BAGLE_Microlensing"
Issues = "https://github.com/MovingUniverseLab/BAGLE_Microlensing/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
