[project]
name = "BAGLE"
description = "BAGLE (Bayesian Analysis of Gravitational Lensing Events) is a package to model and fit microlensing events."
version = "1.0.2"
authors = [
    {name = "Jessica R. Lu", email = "jlu.astro@berkeley.edu"},
    {name = "T. Dex Bhadra"},
    {name = "Michael Medford"},
    {name = "Casey Lam"},
    {name = "Macy Huston"},
    {name = "Edward Broadberry"},
    {name = "Jeff Chen"},
    {name = "Andrew Scharf"},
    {name = "Sean Terry"},
    {name = "Nijaid Arredondo"}
]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE*"]

dependencies = ["numpy>=1.24",
                "pymultinest",
                "matplotlib",
                "astropy>=5.3",
                "celerite",
                "jplephem",
                "scipy>=1.10"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]


[project.urls]
Homepage = "https://github.com/MovingUniverseLab/BAGLE_Microlensing"
Issues = "https://github.com/MovingUniverseLab/BAGLE_Microlensing/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
