[metadata]
name = micromodel
version = 0.0.1
author = Niranjan Bhatia
author_email = ninjab@berkeley.edu
description = microlens package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/micromodel
project_urls =
    Bug Tracker = https://github.com/pypa/micromodel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = micromodel
